Fixed overflow problem when x-scrolling on mobile

--- a/assets/stylesheets/_tickets.scss
+++ b/assets/stylesheets/_tickets.scss
@@ -1,3 +1,7 @@
+#tickets-view {
+    overflow: hidden;
+}
+
 #tickets-top-photo {
 	height: 38em;
 	position: relative;
